# WPM

./: .gitignore  README.md  setup.cfg
src/wpm/: ScreenPrinter.py  StatTracker.py  UserInputController.py  WordSequence.py  __main__.py  const.py  util.py  words.txt
tests/: test_input.py  test_stats.py  test_words.py
