[metadata]
name = WPM
description = Speed typing console program
version = 0.1.1
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages =
    wpm
python_requires = >=3.11
install_requires =
    windows-curses>=2.3.1
package_dir =
    = src
zip_safe = no

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts =
    wpm = wpm.__main__:main

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = IPgen
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=wpm
    --cov-report=term-missing